--- a/computing-student-award/RJwrapper.tex
+++ b/computing-student-award/RJwrapper.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper]{report}
+\documentclass[12pt,a4paper]{report}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{RJournal}
@@ -7,6 +7,8 @@
 
 %% load any required packages here
 \usepackage{bm}
+\usepackage{adjustbox}
+\usepackage{graphicx}
 
 \begin{document}
 
