submitted computing paper, preparing nonparametric paper

--- a/computing-student-award/abstractwrapper.tex
+++ b/computing-student-award/abstractwrapper.tex
@@ -21,7 +21,7 @@
 
 %% replace RJtemplate with your article
 \begin{article}
-  \input{submission}
+  \input{abstract}
 \end{article}
 
 \end{document}
